--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
+
+
+#Connecting the Application with MySql using JDBC mysql driver
 spring.datasource.username=root
-spring.datasource.password=Kan@2911
+spring.datasource.password=sairaj1910
+spring.datasource.url=jdbc:mysql://localhost:3306/blogs?createTableIfNotExists=true
+
+
+#Spring JPA data
+#how the schema should behave an modifying applications
+
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework=debug
+
+#there can be different behaviours of a schema on restoring the application
+#create :->
+#logging.level.org.springframework=debug
